# moodle-tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg
.gitlab/merge_request_templates/: mr-design-doc.md
docs/: analyze_results.md  extract_questions.md  make_questions.md
examples/: cloze.yaml  cloze.yml  coderunner-ddl-intern.yaml  coderunner-ddl.yaml  coderunner-dql-w_connection.yaml  coderunner-dql-wo_connection.yaml  coderunner-stream.yaml  coderunner-w_connection.yaml  coderunner-wo_connection.yaml  coderunner.yaml  coderunner.yml  coderunner_2.yml  diff_set_equality.yaml  diff_set_equiv.yaml  exact_set_equality.yaml  html.yaml  image_overlay_mw.yaml  markdown.yaml  matching.yaml  missing-words.yaml  multiple-true-false.yaml  numerical.yml  numerical_template.yaml.j2  question_template.yaml.j2  single-selection-multiple-choice.yaml  template_base.yaml  true-false.yaml  yaml_templates.yaml
examples/assets/: er_overlay.dia  eshop.db
src/moodle_tools/: __init__.py  analyze_results.py  enums.py  eval.py  extract_questions.py  isis_database_configurations.py  loader.py  make_questions.py  utils.py  yaml_constructors.py
src/moodle_tools/questions/: __init__.py  base.py  cloze.py  coderunner.py  coderunner_sql.py  coderunner_streaming.py  converter.py  description.py  diff_set_equality.py  diff_set_equiv.py  drop_down.py  essay.py  exact_set_equality.py  factory.py  image_overlay_mw.py  matching.py  missing_words.py  multiple_choice.py  multiple_response.py  multiple_true_false.py  numerical.py  question.py  shortanswer.py  single_selection_multiple_choice.py  stack.py  true_false.py
src/moodle_tools/questions/cr_testeval/: cr_testeval.py  ddl_testeval.py  dql_testeval.py
src/moodle_tools/questions/schemas/: question.yaml
src/moodle_tools/questions/stack_subquestions/: dataclasses.py  diff_set_equality_sq.py  exact_set_equality_sq.py  stack_subquestion.py
src/moodle_tools/questions/templates/: coderunner.xml.j2  coderunner_sql.xml.j2  ddl_check_table_correctness.sql.j2  dragdrop_image.xml.j2  dragdrop_missing_words.xml.j2  matching.xml.j2  missing_words.xml.j2  multiple_choice.xml.j2  multiple_true_false.xml.j2  question.xml.j2  quiz.xml.j2  stack.xml.j2  testlogic_ddl.py.j2  testlogic_dql.py.j2  true_false.xml.j2
src/moodle_tools/questions/templates/ddl_check_tablecorrectness/: 10-name.sql.j2  20-types.sql.j2  30-notnull.sql.j2  40-unique.sql.j2  50-primarykeys.sql.j2  60-foreignkeys.sql.j2
tests/: test_allow_eval.py  test_analyze_results.py  test_extract_questions.py  test_inline_images.py  test_make_questions.py  test_utils.py
tests/questions/: test_cloze.py  test_coderunner_sql.py  test_coderunner_streaming.py  test_description.py  test_diff_set_equality.py  test_diff_set_equiv.py  test_exact_set_equality.py  test_markdown_multiple_choice.py  test_matching.py  test_missing_words.py  test_multiple_choice.py  test_multiple_true_false.py  test_numerical.py  test_question_parsing.py  test_shortanswer.py  test_single_selection_multiple_choice.py  test_true_false.py
tests/resources/: clozeRef.xml  coderunner-ddl-intern.xml  coderunner-ddl_replace_tablecorrectness.xml  coderunner-dql-w_connection.xml  coderunner-dql-wo_connection.xml  coderunner-stream.xml  coderunner-streaming.xml  coderunner-w_connection.xml  coderunner-wo_connection.xml  diff_set_equalityRef.xml  dragdrop_missing-wordsRef.xml  exact_set_equalityRef.xml  markdownRef.xml  missing-wordsRef.xml  multiple-choiceRef.xml  multiple-true-falseRef.xml  numericalRef.xml  single-selection-multiple-choiceRef.xml  true-falseRef.xml
