[metadata]
name = moodle_tools
version = 0.0.1
author = Viktor Rosenfeld
author_email = viktor.rosenfeld@tu-berlin.de
description = A collection of tools to simplify working with Moodle quizzes
long_description = file: README.org
long_description_content_type = text/markdown
url = https://git.tu-berlin.de/dima/moodletools
project_urls =
    Bug Tracker = https://git.tu-berlin.de/dima/moodletools/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pyyaml

[options.packages.find]
where = src
